--- a/http/package.json
+++ b/http/package.json
@@ -7,14 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "express": "nodemon express-server.js",
     "tsc": "tsc -w",
-    "rest": "nodemon build/express-rest-server.js"
+    "rest": "nodemon build/express-rest-server.js",
+    "secure": "nodemon build/express-rest-server-secure.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "hbs": "^4.1.1"
+    "hbs": "^4.1.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
