--- a/http/package.json
+++ b/http/package.json
@@ -8,7 +8,10 @@
     "express": "nodemon express-server.js",
     "tsc": "tsc -w",
     "rest": "nodemon build/express-rest-server.js",
-    "secure": "nodemon build/express-rest-server-secure.js"
+    "secure": "nodemon build/express-rest-server-secure.js",
+    "start": "node build/express-rest-server-secure.js",
+    "socketio": "nodemon build/express-rest-server-io.js",
+      "mongo": "nodemon build/express-rest-server-db.js"
   },
   "keywords": [],
   "author": "",
@@ -16,14 +19,18 @@
   "dependencies": {
     "@types/cors": "^2.8.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.18",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.7",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.1",
+    "@types/socket.io": "^2.1.6",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.2"
   }
